--- a/src/app/components/galery/galery.component.html
+++ b/src/app/components/galery/galery.component.html
@@ -1,1 +1,129 @@
-<div class="gallery">asdasd </div>
+<app-nav class="nav-gallery"></app-nav>
+
+<div class="gallery g1">
+    <div class="container">
+        <div  class="headers">
+            <h2>Cabaña 2</h2>
+            <hr>
+        </div>
+    <div class="row">
+      <div class="col-sm">
+        <img src="{{ bkg4 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg2 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg3 }}" alt="Card image cap" class="img" />
+      </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm">
+          <img src="{{ bkg3 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg4 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg2 }}" alt="Card image cap" class="img" />
+        </div>
+      </div>
+
+    <img src="{{ bkg1 }}" alt="Card image cap" class="img2" />
+  </div>
+</div>
+
+<div class="gallery g2">
+    <div  class="headers">
+        <h2>Cabaña 3</h2>
+        <hr>
+    </div>
+    <div class="container">
+        <img src="{{ bkg6 }}" alt="Card image cap" class="img2" />
+    <div class="row">
+      <div class="col-sm">
+        <img src="{{ bkg7 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg12 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg9 }}" alt="Card image cap" class="img" />
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+          <img src="{{ bkg10 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg11 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg8 }}" alt="Card image cap" class="img" />
+        </div>
+      </div>
+    
+  </div>
+</div>
+
+
+
+<div class="gallery g2">
+    <div  class="headers">
+        <h2>Cabaña 4</h2>
+        <hr>
+    </div>
+    <div class="container">
+     
+    <div class="row">
+      <div class="col-sm">
+        <img src="{{ bkg18 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg19 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg20 }}" alt="Card image cap" class="img" />
+      </div>
+    </div>
+    <img src="{{ bkg18 }}" alt="Card image cap" class="img2" />
+    <div class="row">
+        <div class="col-sm">
+          <img src="{{ bkg10 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg11 }}" alt="Card image cap" class="img" />
+        </div>
+        <div class="col-sm">
+          <img src="{{ bkg8 }}" alt="Card image cap" class="img" />
+        </div>
+      </div>
+    
+  </div>
+</div>
+
+
+<div class="gallery g2 g4">
+    <div  class="headers">
+        <h2>Nuestras visitas</h2>
+        <hr>
+    </div>
+    <div class="container">
+    <img src="{{ bkg23}}" alt="Card image cap" class="img2" />
+     
+    <div class="row">
+      <div class="col-sm">
+        <img src="{{ bkg22 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg24 }}" alt="Card image cap" class="img" />
+      </div>
+      <div class="col-sm">
+        <img src="{{ bkg25 }}" alt="Card image cap" class="img" />
+      </div>
+    </div>
+
+    
+  </div>
+</div>
