--- a/src/app/utils/mixins.scss
+++ b/src/app/utils/mixins.scss
@@ -31,3 +31,7 @@
   $fontSizeContact: 20px;
 
   $fontFamilyPlaywrite: "Playwrite NZ", cursive;
+
+  $orange1: #fe884b;
+  $orange2: #ffe0d8;
+  $bkgColor: rgb(240, 240, 240);
