--- a/src/app/components/contact-as/contact-as.component.html
+++ b/src/app/components/contact-as/contact-as.component.html
@@ -1,21 +1,24 @@
 
-<div class="contactAs container">
-    <div class="row">
-        <div class="col-sm-4 col1">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><strong>¡Contactanos!</strong></li>
-                <li class="list-group-item"><img src="../../../assets/whatsapp-icon.png" height="30"/> WhatsApp: 22359638437</li>
-                <li class="list-group-item"><img src="../../../assets/facebook-icon.png" height="30"/> Facebook: 22359638437</li>
-                <li class="list-group-item"><img src="../../../assets/gmail-icon.png" height="30"/> GMail: 22359638437</li>
-                </ul>
-        </div>
-
-        <div class="col-sm-6 col2">
-            <div class="map"></div>
+<section id="mapa">
+    <div class="contactAs container" id="contactComponent">
+        <div class="row">
+            <div class="col-sm-4 col1">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item contactLabel"><strong>¡Contactanos!</strong></li>
+                    <li class="list-group-item"><img src="../../../assets/whatsapp-icon.png" height="30"/> WhatsApp: 
+                        <a aria-label="Chat on WhatsApp" href="https://wa.me/+5492235916030" target="_blank">2235916030</a >
+                        </li>
+                    <li class="list-group-item"><img src="../../../assets/facebook-icon.png" height="30"/> Facebook: <a href="https://web.facebook.com/cabanaslodejaz?locale=es_LA" target="_blank">/cabanaslodejaz</a></li>
+                    <li class="list-group-item"><img src="../../../assets/gmail-icon.png" height="30"/> Gmail: <a href="mailto:lodejazcaleta@gmail.com" target="_blank">{{mailTo}}</a></li>
+                    </ul>
+            </div>
+            <div class="col-sm-6 col2">
+                <div>
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.3098707538766!2d-57.462028724307864!3d-37.78277723226745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584cd88793ddf59%3A0xc5daeba51f4bed14!2zQ2FiYcOxYXMgIkxvIGRlIEpheiI!5e0!3m2!1ses-419!2sar!4v1719598116539!5m2!1ses-419!2sar" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-      
-
+</section>
 
 
