--- a/src/app/components/contact-as/contact-as.component.scss
+++ b/src/app/components/contact-as/contact-as.component.scss
@@ -1,3 +1,5 @@
+@import '../../utils/mixins.scss';
+
 .contactAs {
     margin: 0 auto;
     margin-top: -25px;
@@ -15,6 +17,9 @@
             margin-bottom: 30px;
             letter-spacing: 0.20em;
             list-style: none;
+            .contactLabel {
+                @include legendStyle;
+            }
         }
         .col2 { 
             margin-top: 10px;
@@ -28,9 +33,8 @@
             .map {
                 width: 120%;
                 height: 410px;
-                background-repeat: no-repeat;
-                background-image: url('../../../assets/900x600_google-maps-va-eliminar-tu-historial-ubicaciones-si-no-sigues-estos-pasos-1037998-103405.webp');
-                background-size: cover;
+                border: 2px solid #fe884b;;
+                padding: 1px;
             }
         }
         .list-group-item{
