--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,28 +1,30 @@
+<section id="contacto">
 <div class="footer container">
     <div class="row">
-        <div class="col-sm-5 col1">
+        <div class="col-sm-5 col1" style="background-image: url({{bkgUrl}})">
 
         </div>
 
         <div class="col-sm-6 col2">
-            <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+            <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" id="contact-form">
                 
-                <div class="row">                
-                    <label class="col-sm-6" for="firstLastname">Nombre y Apellido:</label>
-                    <input class="col-sm-5" id="firstLastname" formControlName="firstLastname" mixlength="3" maxlength="30">
+                <div class="row">  
+                              
+                    <label class="col-sm-6" for="firstLastname" >Nombre y Apellido:</label>
+                    <input class="col-sm-5" placeholder="Lo de Jaz" id="firstLastname" autocomplete="off" formControlName="firstLastname" name="firstLastname" mixlength="3" maxlength="30">
                 </div>
                 
                 <div class="row">                
                     <label class="col-sm-6"for="contactNumber">Número de contacto:</label>
-                    <input class="col-sm-5" id="contactNumber" formControlName="contactNumber" type="number">
+                    <input class="col-sm-5" placeholder="2235916030" id="contactNumber" autocomplete="off" spellcheck="false" formControlName="contactNumber" name="contactNumber" type="number">
                 </div>
                 <div class="row">                
                     <label class="col-sm-6" for="email">Email:</label>
-                    <input class="col-sm-5" id="email" formControlName="email">
+                    <input class="col-sm-5" placeholder="lodejaz@gmail.com"  id="email" autocomplete="off" formControlName="email"  name="email">
                 </div>
                 <div class="row">                
                     <label class="col-sm-6" for="msg">¿Cuál es su consulta?:</label>
-                    <input class="col-sm-5" id="msg" formControlName="msg" mixlength="5" maxlength="300">
+                    <textarea class="col-sm-5 msgInput" placeholder="Buenas Tardes! Quiero consultar disponibilidad para la semana del 10 de enero, gracias!"  id="msg" autocomplete="off" formControlName="msg" name="msg"> </textarea>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar consulta</button>
             </form>
@@ -35,3 +37,4 @@
 
 
 
+</section>
