--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,8 @@
     margin: 0 auto;
     margin-top: 30px;
     width: 80%;
-    height: 400px;
+    height: 100%;
+    margin-bottom: 35px;
     input[type=number]::-webkit-inner-spin-button, 
     input[type=number]::-webkit-outer-spin-button { 
         -webkit-appearance: none; 
@@ -11,11 +12,16 @@
     
     .row {
         background-color: #ffe0d8;
-        margin-bottom: 20px;
-        
+        margin-bottom: 3%;
+        .msgInput {
+            height: 70px;
+        }
+        ::placeholder {
+            color: rgb(154, 154, 154);
+            font-size: 12px;
+          }
     }
     .col1 {
-        background-image: url('../../../assets/bkg1.jpg');
         height: 280px;
         margin: 10px;
         background-size: contain;
@@ -38,7 +44,6 @@
         
         button {
             width: 100%;
-            margin-top: 10px;
         }
         .btn-primary {
             background-color: #fe884b;
