--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,13 +1,16 @@
 <div class="nav-display">
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link" href="#">GALERIA DE FOTOS</a>
+      <a class="nav-link" routerLink="/">INICIO</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">CONTACTANOS</a>
+      <a class="nav-link" routerLink="/galeria">GALERIA DE FOTOS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">MAPA</a>
+      <a class="nav-link" (click)="scrollToSection('contacto')" routerLink="/">CONTACTO</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="scrollToSection('mapa')" routerLink="/">MAPA</a>
     </li>
   </ul>
 </div>
