--- a/src/app/components/principal/principal.component.scss
+++ b/src/app/components/principal/principal.component.scss
@@ -1,7 +1,7 @@
 @import '../../utils/mixins.scss';
 
 .bkg-main {
-    background-image: url('../../../assets/bkg1.jpg');
+  //  background-image: url('../../../assets/playa.jpg');
     width: 100%;
     height: 100vh;
     background-size: cover;
