Gallery almost ready

--- a/src/app/components/contact-as/contact-as.component.html
+++ b/src/app/components/contact-as/contact-as.component.html
@@ -6,7 +6,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item contactLabel"><strong>¡Contactanos!</strong></li>
                     <li class="list-group-item"><img src="../../../assets/whatsapp-icon.png" height="30"/> WhatsApp: 
-                        <a aria-label="Chat on WhatsApp" href="https://wa.me/+5492235916030" target="_blank">2235916030</a >
+                        <a aria-label="Chat on WhatsApp" href="https://wa.me/+5492235916030" target="_blank">¡Click aquí!</a >
                         </li>
                     <li class="list-group-item"><img src="../../../assets/facebook-icon.png" height="30"/> Facebook: <a href="https://web.facebook.com/cabanaslodejaz?locale=es_LA" target="_blank">/cabanaslodejaz</a></li>
                     <li class="list-group-item"><img src="../../../assets/gmail-icon.png" height="30"/> Gmail: <a href="mailto:lodejazcaleta@gmail.com" target="_blank">{{mailTo}}</a></li>
