--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -11,20 +11,20 @@
                 <div class="row">  
                               
                     <label class="col-sm-6" for="firstLastname" >Nombre y Apellido:</label>
-                    <input class="col-sm-5" placeholder="Lo de Jaz" id="firstLastname" autocomplete="off" formControlName="firstLastname" name="firstLastname" mixlength="3" maxlength="30">
+                    <input class="col-sm-5" placeholder="..." id="firstLastname" autocomplete="off" formControlName="firstLastname" name="firstLastname" mixlength="3" maxlength="30">
                 </div>
                 
                 <div class="row">                
                     <label class="col-sm-6"for="contactNumber">Número de contacto:</label>
-                    <input class="col-sm-5" placeholder="2235916030" id="contactNumber" autocomplete="off" spellcheck="false" formControlName="contactNumber" name="contactNumber" type="number">
+                    <input class="col-sm-5" placeholder="..." id="contactNumber" autocomplete="off" spellcheck="false" formControlName="contactNumber" name="contactNumber" type="number">
                 </div>
                 <div class="row">                
                     <label class="col-sm-6" for="email">Email:</label>
-                    <input class="col-sm-5" placeholder="lodejaz@gmail.com"  id="email" autocomplete="off" formControlName="email"  name="email">
+                    <input class="col-sm-5" placeholder="..."  id="email" autocomplete="off" formControlName="email"  name="email">
                 </div>
                 <div class="row">                
                     <label class="col-sm-6" for="msg">¿Cuál es su consulta?:</label>
-                    <textarea class="col-sm-5 msgInput" placeholder="Buenas Tardes! Quiero consultar disponibilidad para la semana del 10 de enero, gracias!"  id="msg" autocomplete="off" formControlName="msg" name="msg"> </textarea>
+                    <textarea class="col-sm-5 msgInput" placeholder="..."  id="msg" autocomplete="off" formControlName="msg" name="msg"> </textarea>
                 </div>
                 <button class="btn btn-primary" type="submit">Enviar consulta</button>
             </form>
