--- a/src/app/components/galery/galery.component.html
+++ b/src/app/components/galery/galery.component.html
@@ -1,129 +1,211 @@
-<app-nav class="nav-gallery"></app-nav>
 
-<div class="gallery g1">
-    <div class="container">
-        <div  class="headers">
-            <h2>Cabaña 2</h2>
-            <hr>
-        </div>
+<div class="gallery-card">
+  <app-nav></app-nav>
+  <div class="presentation-cabin">
+    <p class="p-cards-presentation">Nuestras cabañas</p>
+    <hr class="hr-presentation" />
+    Bienvenidos a nuestras encantadoras cabañas, ideal para unas vacaciones
+    tranquilas y relajantes en plena naturaleza.
+    <br />Nuestras cabañas está equipada con todo lo necesario para que
+    disfrutes de una estancia cómoda y memorable, situadas en un entorno natural
+    tranquilo, rodeada de bosque y playas. <br />Se puede disfrutar de
+    caminatas, ciclismo, pesca, y otras actividades al aire libre. <br />A unos
+    minutos de tiendas, restaurantes y servicios básicos. <br />A solo dos
+    cuadras de las playas. <br />Nuestra cabaña es el lugar perfecto para
+    desconectar y disfrutar de la naturaleza sin renunciar a las comodidades
+    modernas. <br />
+    <span class="float-right">
+      <strong>¡Esperamos darte la bienvenida pronto!</strong></span
+    >
+  </div>
+  
+  <div class="g-card">
+    <p class="p-cards">Cabaña 2</p>
+    <hr />
+    <div>
+      <ul class="list-cabin">
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Capacidad: La cabaña puede alojar cómodamente hasta 6 personas.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Dormitorios: Cuenta con 1 acogedor dormitorio con una cama queen-size
+          y una cama individual.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Cocina: La cocina está totalmente equipada con electrodomésticos
+          modernos, incluyendo una nevera, estufa, horno y microondas. También
+          encontrarás utensilios de cocina, vajilla y cubiertos.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Sala de Estar: Una espaciosa sala de estar con un cómodo sofá, parrila
+          interna y un televisor con Direct TV incluido.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Comedor: Un comedor amplio con una mesa para 4 personas.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Internet: Conexión Wi-Fi en toda la cabaña.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Parrilla: Parrilla al aire libre para disfrutar de deliciosas comidas
+          al aire libre.
+        </li>
+        <li>
+          <img src="../../../assets/fav-icon.png" height="15" />
+          Jardín: Un hermoso jardín con áreas verdes para descansar y disfrutar
+          de la naturaleza.
+        </li>
+      </ul>
+    </div>
     <div class="row">
       <div class="col-sm">
-        <img src="{{ bkg4 }}" alt="Card image cap" class="img" />
+        <img src="{{ bkg18 }}" alt="Card image cap" class="img-row" />
       </div>
       <div class="col-sm">
-        <img src="{{ bkg2 }}" alt="Card image cap" class="img" />
+        <img src="{{ bkg19 }}" alt="Card image cap" class="img-row" />
       </div>
       <div class="col-sm">
-        <img src="{{ bkg3 }}" alt="Card image cap" class="img" />
+        <img src="{{ bkg20 }}" alt="Card image cap" class="img-row" />
       </div>
     </div>
+    <img src="{{ bkg18 }}" alt="Card image cap" class="img-big" />
+  </div>
 
-    <div class="row">
-        <div class="col-sm">
-          <img src="{{ bkg3 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg4 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg2 }}" alt="Card image cap" class="img" />
-        </div>
-      </div>
+<!---->
+<div class="g-card">
+  <p class="p-cards">Cabaña 3</p>
+  <hr />
+  <div>
+    <ul class="list-cabin">
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Capacidad: La cabaña puede alojar cómodamente hasta 2 personas.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Dormitorios: Cuenta con 1 acogedor dormitorio con una cama queen-size
+        y TV.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Cocina: La cocina está totalmente equipada con electrodomésticos
+        modernos, incluyendo una nevera, estufa, horno y microondas. También
+        encontrarás utensilios de cocina, vajilla y cubiertos.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Comedor: Un comedor con una mesa para 4 personas y TV.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Internet: Conexión Wi-Fi en toda la cabaña.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Parrilla: Parrilla al aire libre para disfrutar de deliciosas comidas
+        al aire libre.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Jardín: Un hermoso jardín con áreas verdes para descansar y disfrutar
+        de la naturaleza.
+      </li>
+    </ul>
+  </div>
+  <img src="{{ bkg1 }}" alt="Card image cap" class="img-big" />
 
-    <img src="{{ bkg1 }}" alt="Card image cap" class="img2" />
+  <div class="row">
+    <div class="col-sm">
+      <img src="{{ bkg2 }}" alt="Card image cap" class="img-row" />
+    </div>
+    <div class="col-sm">
+      <img src="{{ bkg3 }}" alt="Card image cap" class="img-row" />
+    </div>
+    <div class="col-sm">
+      <img src="{{ bkg4 }}" alt="Card image cap" class="img-row" />
+    </div>
   </div>
 </div>
 
-<div class="gallery g2">
-    <div  class="headers">
-        <h2>Cabaña 3</h2>
-        <hr>
+<!---->
+<div class="g-card">
+  <p class="p-cards">Cabaña 4</p>
+  <hr />
+  <div>
+    <ul class="list-cabin">
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Capacidad: La cabaña puede alojar cómodamente hasta 4 personas.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Dormitorios: Cuenta con una cama queen-size, un sofa cama y TV.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Cocina: La cocina está totalmente equipada con electrodomésticos
+        modernos, incluyendo una nevera, estufa, horno y microondas. También
+        encontrarás utensilios de cocina, vajilla y cubiertos.
+      </li>
+      <li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Comedor: Un comedor amplio con una mesa para 4 personas.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Internet: Conexión Wi-Fi en toda la cabaña.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Parrilla: Parrilla al aire libre para disfrutar de deliciosas comidas
+        al aire libre.
+      </li>
+      <li>
+        <img src="../../../assets/fav-icon.png" height="15" />
+        Jardín: Un hermoso jardín con áreas verdes para descansar y disfrutar
+        de la naturaleza.
+      </li>
+    </ul>
+  </div>
+
+  <div class="row">
+    <div class="col-sm">
+      <img src="{{ bkg7 }}" alt="Card image cap" class="img-row" />
     </div>
-    <div class="container">
-        <img src="{{ bkg6 }}" alt="Card image cap" class="img2" />
-    <div class="row">
-      <div class="col-sm">
-        <img src="{{ bkg7 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg12 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg9 }}" alt="Card image cap" class="img" />
-      </div>
+    <div class="col-sm">
+      <img src="{{ bkg8 }}" alt="Card image cap" class="img-row" />
     </div>
-    <div class="row">
-        <div class="col-sm">
-          <img src="{{ bkg10 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg11 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg8 }}" alt="Card image cap" class="img" />
-        </div>
-      </div>
-    
+    <div class="col-sm">
+      <img src="{{ bkg9 }}" alt="Card image cap" class="img-row" />
+    </div>
+  </div>
+  <img src="{{ bkg6 }}" alt="Card image cap" class="img-big" />
+
+  <div class="row">
+    <div class="col-sm">
+      <img src="{{ bkg10 }}" alt="Card image cap" class="img-row" />
+    </div>
+    <div class="col-sm">
+      <img src="{{ bkg11 }}" alt="Card image cap" class="img-row" />
+    </div>
+    <div class="col-sm">
+      <img src="{{ bkg12 }}" alt="Card image cap" class="img-row" />
+    </div>
   </div>
 </div>
 
-
-
-<div class="gallery g2">
-    <div  class="headers">
-        <h2>Cabaña 4</h2>
-        <hr>
-    </div>
-    <div class="container">
-     
-    <div class="row">
-      <div class="col-sm">
-        <img src="{{ bkg18 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg19 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg20 }}" alt="Card image cap" class="img" />
-      </div>
-    </div>
-    <img src="{{ bkg18 }}" alt="Card image cap" class="img2" />
-    <div class="row">
-        <div class="col-sm">
-          <img src="{{ bkg10 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg11 }}" alt="Card image cap" class="img" />
-        </div>
-        <div class="col-sm">
-          <img src="{{ bkg8 }}" alt="Card image cap" class="img" />
-        </div>
-      </div>
-    
+  <div class="footer-galery">
+    <app-contact-as></app-contact-as>
   </div>
+
 </div>
 
 
-<div class="gallery g2 g4">
-    <div  class="headers">
-        <h2>Nuestras visitas</h2>
-        <hr>
-    </div>
-    <div class="container">
-    <img src="{{ bkg23}}" alt="Card image cap" class="img2" />
-     
-    <div class="row">
-      <div class="col-sm">
-        <img src="{{ bkg22 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg24 }}" alt="Card image cap" class="img" />
-      </div>
-      <div class="col-sm">
-        <img src="{{ bkg25 }}" alt="Card image cap" class="img" />
-      </div>
-    </div>
-
-    
-  </div>
-</div>
