--- a/src/app/components/galery/galery.component.scss
+++ b/src/app/components/galery/galery.component.scss
@@ -1,76 +1,99 @@
 @import '../../utils/mixins.scss';
 
-.nav-gallery{
-    display: block;
-    background-color: #0000001c;
-    position: absolute;
-    width: 100%;
-    margin-top: -26px;
-    height: 85px;
-}
-
-.gallery {
-    width: 100%;
-    background-color: white;
-    height: 1100px;
-    .headers {
-        padding-top: 70px;
-        padding-bottom: 20px;
-        h2{
+.gallery-card {
+    background-image: url('../../../assets/playa.jpg');
+    background-size: cover;
+    margin-top: -10px;
+    padding-top: 10px;
+    height: 100vh;
+    .presentation-cabin {
+        width: 90%;
+        background-color: $orange2;
+        margin: 0 auto;
+        @include legendStyleSmall;
+        padding: 3%;
+        letter-spacing: 0.25rem;
+        margin-top: 5%;
+        padding-bottom: 5%;
+        .float-right {
+            float: right;
+            margin-top: 2%;
+            margin-bottom: 2%;
+        }
+        .p-cards-presentation {
             @include legendStyle;
-            letter-spacing: 0.15em;
-            text-align: center; 
-        }
-        hr {
-            @include hrstyle;
             margin: 0 auto;
-            position: inherit;
+            text-align: center;
+            font-family:"Playwrite NZ", cursive;
+            font-size: 35px;
+        }
+        .hr-presentation {
+            margin-bottom: 3%;
+            margin-top: 2%;
+            width: 200px;
+            height: 2px;
         }
     }
-    .container {
-        width: 100%;
-        height: 1200px;
-        background-color: white;
-        
-       
-        .row {
-            margin-top: 500px;
+    .p-cards{
+        @include legendStyle;
+        margin: 0 auto;
+        margin-top: 30px;
+        text-align: center;
+        font-family:"Playwrite NZ", cursive;
+        font-size: 35px;
+    }
+    hr {
+        background-color: #fe884b;
+        width: 80px;
+        height: 2px;
+        margin: 0 auto;
+        margin-top: 2%;
+    }
+    .g-card {
+        width: 90%;
+        background-color: #f0f0f0;
+        margin: 0 auto;
+        margin-top: 40px;
+        padding-top: 20px;
+        padding-bottom: 2%;
+        .list-cabin {
+            font-size: 20px;
+            margin-left: 1%;
+            margin-bottom: 3%;
+            list-style: none;
+            @include legendStyleSmall;
+            padding: 3%;
+            margin-top: 2%;
+            letter-spacing: 0.25rem;
+        }
+        .img-big {
+            width: 95%;
+            margin: 0 auto;
             display: flex;
-            justify-content: center;
-            width: 90%;
-            margin: 0 auto;
-            .img {
-            width: 100%;
-            padding: 10px;
+            margin-top: 8px;
+            margin-bottom: 10px;
+          //  box-shadow: 1px 6px 10px 10px rgba(0,0,0,0.6);
         }
-    }
-    .img2 {
-        display: flex;
-        height: 67%;
-        background-size: cover;
-        margin: 0 auto;
-        width: 89%;
-        margin: 0 auto;
-        background-repeat: no-repeat;
-    }   
-}
-} 
+        .row {
+            display: flex;
+            margin: 0 auto;
+            margin-left: 2%;
+            margin-right:2%;
+        }        
+        .img-row {
+            width: 100%; 
+            padding-left: 1%;
+            padding-right: 1%;
+//            box-shadow: 1px 6px 10px 10px rgba(0,0,0,0.6);
+        }
 
-.g2{
-    background-color: white;
-    margin-top: 30%;
-    .container {
-        background-color: white;
     }
-}
-
-.g1 {
-    .container {
-        background: linear-gradient(
-            rgb(45 32 32 / 0%), rgb(255 255 255)
-          ),url('../../../assets/playa.jpg');
+    .footer-galery {
+        width: 90%;
+        background-color: #f0f0f0;
+        margin: 0 auto;
+        margin-top: 5%;
+        margin-bottom: 5%;
+        height: 75%;
     }
-}
-.g4 {
-    margin-top: 32%;
 }
