--- a/src/app/components/main-card/main-card.component.scss
+++ b/src/app/components/main-card/main-card.component.scss
@@ -1,7 +1,7 @@
 @import '../../utils/mixins.scss';
 
 .main-card {
-    background-color: rgb(240, 240, 240);
+    background-color: #f0f0f0;
     width: 80%;
     height: 100vh;
     margin: 0 auto;
