--- a/src/app/components/galery/galery.component.scss
+++ b/src/app/components/galery/galery.component.scss
@@ -94,6 +94,70 @@
         margin: 0 auto;
         margin-top: 5%;
         margin-bottom: 5%;
-        height: 75%;
     }
 }
+
+.carousel {
+    display: flex;
+    width: 96%;
+    margin: 0 auto;
+}
+.carousel-container {
+    position: relative;
+    max-width: 600px;
+    margin: 0 auto;
+    margin: 1%;
+    overflow: hidden;
+  }
+  
+  .carousel-slide {
+    display: none;
+    width: 100%;
+  }
+  
+  .carousel-slide.active {
+    display: block;
+  }
+  
+  .carousel-slide img {
+    width: 100%;
+  }
+  
+  .carousel-caption {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 8px;
+  }
+  
+  .carousel-button {
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.5);
+    border: none;
+  }
+  
+  .carousel-button:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  .carousel-button:focus {
+    outline: none;
+  }
+  
+  .carousel-button:nth-of-type(2) {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
