--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,7 +7,7 @@
       <a class="nav-link" routerLink="/galeria">GALERIA DE FOTOS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('contacto')" routerLink="/">CONTACTO</a>
+      <a class="nav-link"  routerLink="/" (click)="scrollToSection('contacto')">CONTACTO</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" (click)="scrollToSection('mapa')" routerLink="/">MAPA</a>
