--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,7 +1,8 @@
 @import '../../utils/mixins.scss';
 
 .nav-display {
-    display: ruby-text;
+    display: flex;
+    justify-content: center;
     margin-top: 10px;
     .nav-link {
         letter-spacing: 0.25em;
