--- a/src/app/components/card-reverse/card-reverse.component.html
+++ b/src/app/components/card-reverse/card-reverse.component.html
@@ -2,7 +2,7 @@
     <div class="card-section-1-reverse" style="background-image: url({{bkgUrl}});">
     </div>
     <div class="card-section-2-reverse">
-        <p class="p-cards-reverse">{{legend}}</p>
+        <h3 class="p-cards-reverse">{{legend}}</h3>
         <hr>
     </div>
 </div>
