--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="individual-card">
     <div class="card-section-1">
-        <p class="p-cards">{{legend}}</p>
+        <h3 class="p-cards">{{legend}}</h3>
         <hr>
     </div>
     <div class="card-section-2" style="background-image: url({{bkgUrl}})">
