--- a/src/app/components/galery/galery.component.html
+++ b/src/app/components/galery/galery.component.html
@@ -3,8 +3,8 @@
   <app-nav></app-nav>
 
   <div class="presentation-cabin">
-    <p class="p-cards-presentation">Nuestras cabañas</p>
-    <hr class="hr-presentation" />
+    <h2 class="p-cards-presentation">Nuestras cabañas</h2>
+    <h3 class="text-legend"><hr class="hr-presentation" />
     Bienvenidos a nuestras encantadoras cabañas, ideal para unas vacaciones
     tranquilas y relajantes en plena naturaleza.
     <br />Nuestras cabañas está equipada con todo lo necesario para que
@@ -15,13 +15,14 @@
     cuadras de las playas. <br />Nuestra cabaña es el lugar perfecto para
     desconectar y disfrutar de la naturaleza sin renunciar a las comodidades
     modernas. <br />
+    </h3>
     <span class="float-right">
-      <strong>¡Esperamos darte la bienvenida pronto!</strong></span
-    >
+      <h2 class="legend-h"><strong>¡Esperamos darte la bienvenida pronto!</strong></h2>
+      </span>
   </div>
   
   <div class="g-card">
-    <p class="p-cards">Cabaña 2</p>
+    <h2><p class="p-cards">Cabaña 2</p></h2>
     <hr />
     <div>
       <ul class="list-cabin">
@@ -106,7 +107,7 @@
 
 <!---->
 <div class="g-card">
-  <p class="p-cards">Cabaña 3</p>
+  <h2><p class="p-cards">Cabaña 3</p></h2>
   <hr />
   <div>
     <ul class="list-cabin">
@@ -162,7 +163,7 @@
 
 <!---->
 <div class="g-card">
-  <p class="p-cards">Cabaña 4</p>
+  <h2><p class="p-cards">Cabaña 4</p></h2>
   <hr />
   <div>
     <ul class="list-cabin">
