--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,16 +1,16 @@
 <div class="nav-display">
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link" routerLink="/">INICIO</a>
+      <a class="nav-link" routerLink="/" title="Lo de Jaz cabañas - Reserva en La Caleta">INICIO</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/galeria">GALERIA DE FOTOS</a>
+      <a class="nav-link" routerLink="/galeria" title="Lo de Jaz cabañas - Galeria de imagenes en La Caleta">GALERIA DE FOTOS</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link"  routerLink="/" (click)="scrollToSection('contacto')">CONTACTO</a>
+      <a class="nav-link"  routerLink="/"  title="Lo de Jaz cabañas - Reserva en La Caleta" (click)="scrollToSection('contacto')">CONTACTO</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" (click)="scrollToSection('mapa')" routerLink="/">MAPA</a>
+      <a class="nav-link" routerLink="/"  title="Lo de Jaz cabañas - Reserva en La Caleta" (click)="scrollToSection('mapa')" >MAPA</a>
     </li>
   </ul>
 </div>
