--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,4 +1,4 @@
-<div class="bkg-main" style="background-image: url({{bkgUrl}})">
+<div class="bkg-main" style="background-image: url({{bkgUrl}})" alt="Paisaje de un atardecer en La Caleta">
     <app-nav></app-nav>
     <h1 class="head-main">Bienvenidos a <p style="margin-top: 30px;"></p> Cabañas Lo de Jaz </h1>
     <app-main-card></app-main-card>
